[Front-007] Fixed modal not showing on User and added functions
- Modal était vide car UserAddComponent n'était pas ajouté dans app-routing-module (objet + path)
- Ajout de fonctions dans les fichiers .ts pour manipuler/transférer les datas entres les components User et UserAdd  ( "private dialogRef" )
- Correction de problèmes graphiques du formulaire dans la modal UserAddComponent
- Ajout des boutons "Modifier" et "Supprimer" dans la liste des utilisateurs UserComponent
-

--- a/Erp-Biscuiterie-Front/src/app/model/user/user.component.css
+++ b/Erp-Biscuiterie-Front/src/app/model/user/user.component.css
@@ -15,6 +15,14 @@
     width: 100%; 
   }
 
+  #show-users table th:last-child {
+    width: 180px;
+  }
+
+  #show-users table .btn-edit {
+    margin-right: 10px;
+  }
+
 .fill-remaining-space {
     /* This fills the remaining space, by using flexbox.
        Every toolbar row uses a flexbox row layout. */
